--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "daisyui": "^2.31.0",
     "firebase": "^9.11.0",
     "framer-motion": "^7.5.3",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "slick-carousel": "^1.8.1",
