--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.4.7",
+    "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +19,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "slick-carousel": "^1.8.1",
