--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.23",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-firebase-hooks": "^5.0.3",
