--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.4.2",
     "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
