--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.23",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-firebase-hooks": "^5.0.3",
