--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+   
+    "@faker-js/faker": "^7.6.0",
     "@lottiefiles/react-lottie-player": "^3.4.7",
+ 
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
-    "react-chat-engine": "^1.11.23",
+    "react-apexcharts": "^1.4.0",
+    "react-chat-engine": "^1.8.13",
+    "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
@@ -26,10 +33,11 @@
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.4.2",
     "react-s3": "^1.3.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "video.js": "^7.20.3",
     "web-vitals": "^2.1.4"
   },
