--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.4.7",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.36.0",
     "axios": "^1.1.2",
     "buffer": "^6.0.3",
     "daisyui": "^2.31.0",
@@ -16,7 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.6.4",
+    "react-apexcharts": "^1.4.0",
     "react-chat-engine": "^1.11.23",
+    "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
@@ -28,6 +33,7 @@
     "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "slick-carousel": "^1.8.1",
     "video.js": "^7.20.3",
