--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
-   
     "@faker-js/faker": "^7.6.0",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "@ramonak/react-progress-bar": "^5.0.3",
@@ -32,6 +31,7 @@
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
     "react-paginate": "^8.1.3",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
