--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.9.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-apexcharts": "^1.4.0",
@@ -32,6 +33,7 @@
     "react-leaflet": "^4.1.0",
     "react-paginate": "^8.1.3",
     "react-query": "^3.39.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.2",
     "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
