--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
     #    npm run build
     
     - name: 📂 Sync files
-      uses: Showcase11/ShowCase-V-2@2.4.0
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USRNAME }}
