--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,10 +8,10 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
 
-    - name: Use Node.js 16
+    - name: Use Node.js 14
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '14'
       
     - name: 🔨 Build Project
       run: |
@@ -22,5 +22,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USRNAME }}
+        username: myFtpUserName
         password: ${{ secrets.FTP_PASSWORD }}
