--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
       with:
         server: ftp.showcaseurbusiness.com
-        username: ${{ secrets.FTP_USERNAME }}
+        username: ftpgitshowcase
         password: ${{ secrets.FTP_PASSWORD }}
+        port: 21
         server-dir: /app.showcaseurbusiness.com/ftpgitshowcase/
