--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-apexcharts": "^1.4.0",
-    "react-chat-engine": "^1.11.23",
     "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -43,6 +42,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.3",
     "swiper": "^8.4.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "video.js": "^7.20.3",
     "web-vitals": "^2.1.4"
   },
